// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/multicluster-grpc/multicluster-agent/proto";
option java_multiple_files = true;
option java_package = "io.grpc.examples.proto";
option java_outer_classname = "proto";

package proto;

// The greeting service definition.
service EndPointService {
  // Sends a greeting
  rpc ProcessEndpoints (ClusterAgentRequest) returns (ServerResponse) {}
}

// The request message containing the user's name.
message ClusterAgentRequest {
  string svcName = 1;
  string clusterName = 2;
  repeated Record records=3;
}

message Record {
  string  svcPort =1;
  string  targetPort =2;
  repeated  NetworkInfo nwInfo=3;
}

message NetworkInfo{
  string  mac=1;
  string endPoint=2;
}

// The response message containing the greetings
message ServerResponse {
  string message = 1;
}

